Update default server URL to 'http://192.168.31.205:8871/api' in background script and options

--- a/chrome_extension/options.html
+++ b/chrome_extension/options.html
@@ -56,7 +56,7 @@
   
   <div class="form-group">
     <label for="serverUrl">服务器地址</label>
-    <input type="text" id="serverUrl" placeholder="例如: http://localhost:5000">
+    <input type="text" id="serverUrl" placeholder="例如: http://192.168.31.205:8871/api">
     <p>请填写完整的服务器地址，不要在末尾添加斜杠 "/"</p>
   </div>
   
